--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@ hi im luke this is my blog and stuff i made
 </tr>
 
 <tr>
-<td class="org-left"><a href="https://www.youtube.com/watch?v=VD90BpPGpEo&amp;t=75s">process</a></td>
+<td class="org-left"><a href="https://www.youtube.com/watch?v=VD90BpPGpEo">process</a></td>
 <td class="org-left">art, music, video</td>
 <td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2024-07-19 Fri]</span></span></td>
 </tr>
@@ -371,7 +371,7 @@ hi im luke this is my blog and stuff i made
 </table>
 
 
-<div id="orgd84dd84" class="figure">
+<div id="org46499d7" class="figure">
 <p><img src="images/waveforms.png" alt="waveforms.png" width="150" />
 </p>
 </div>
