--- a/public/into_this_wired_abyss.html
+++ b/public/into_this_wired_abyss.html
@@ -206,14 +206,14 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgf92b8d9">Into This Wired Abyss</a></li>
+<li><a href="#orgfa8a846">Into This Wired Abyss</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgf92b8d9" class="outline-2">
-<h2 id="orgf92b8d9">Into This Wired Abyss</h2>
-<div class="outline-text-2" id="text-orgf92b8d9">
+<div id="outline-container-orgfa8a846" class="outline-2">
+<h2 id="orgfa8a846">Into This Wired Abyss</h2>
+<div class="outline-text-2" id="text-orgfa8a846">
 <p>
 A series of compilations that I curated, showcasing various friends, collaborators and talented noise makers from the alternative electronic music world from 2012 to 2015
 </p>
